[package]
name = "kooha"
version = "2.2.4"
authors = ["Dave Patrick Caberto <davecruz48@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
anyhow = "1.0.59"
futures-channel = "0.3.19"
futures-util = { version = "0.3", default-features = false }
gdk-wayland = { package = "gdk4-wayland", version = "0.8" }
gdk-x11 = { package = "gdk4-x11", version = "0.8" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gsettings-macro = "0.2"
gst = { package = "gstreamer", version = "0.22" }
gst-plugin-gif = "0.12"
gst-plugin-gtk4 = { version = "0.12", features = ["gtk_v4_14"] }
gst_pbutils = { package = "gstreamer-pbutils", version = "0.22", features = [
    "v1_20",
] }
gst_video = { package = "gstreamer-video", version = "0.22" }
gtk = { package = "gtk4", version = "0.8", features = ["v4_14"] }
once_cell = "1.19.0"
pulse = { package = "libpulse-binding", version = "2.26.0" }
pulse_glib = { package = "libpulse-glib-binding", version = "2.25.1" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
